--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://phattaraphon.github.io/portfolio",
+  "homepage": "https://phattaraphon.github.io/portfolio",
   "dependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
